Bug 530012 - [OS/2] build break in nsPresArena.cpp; r=wuno a=dbaron

--HG--
extra : rebase_source : a64adf531e9132c583419def72c712fc345774d7